<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.edumedia.rileygriffith.hsvcolorpicker.MainActivity">


    <TextView
        android:id="@+id/colorSwatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp"
        android:height="200dp"
        android:background="#000000"
        android:longClickable="true"
        android:textAlignment="viewStart"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <TextView
        android:id="@+id/hue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/hueLayout"
        android:layout_alignParentBottom="false"
        android:layout_marginLeft="16dp"
        android:text="@string/hue"
        android:textAlignment="textStart"
        android:textSize="24sp" />

    <FrameLayout
        android:id="@+id/hueLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_above="@+id/brightness"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/hueGradient"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_above="@+id/hue"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="55dp"
            android:scaleType="fitXY"
            android:src="@drawable/gradient_hue" />

        <SeekBar
            android:id="@+id/hueSB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="359"
            android:progress="0" />

    </FrameLayout>

    <TextView
        android:id="@+id/brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/brightnessLayout"
        android:layout_alignStart="@+id/hue"
        android:text="@string/brightness"
        android:textAlignment="textStart"
        android:textSize="24sp" />

    <FrameLayout
        android:id="@+id/brightnessLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_above="@+id/saturation"
        android:layout_alignParentStart="false"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/brightnessGradient"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_above="@+id/hue"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="55dp"
            android:scaleType="fitXY"
            android:src="@drawable/gradient_brightness" />

        <SeekBar
            android:id="@+id/brightnessSB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="100" />

    </FrameLayout>

    <TextView
        android:id="@+id/saturation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/horizontalScroll"
        android:layout_alignStart="@+id/brightness"
        android:layout_marginBottom="75dp"
        android:text="@string/saturation"
        android:textSize="24sp" />

    <FrameLayout
        android:id="@+id/saturationLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_above="@+id/horizontalScroll"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp">

        <ImageView
            android:id="@+id/saturationGradient"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_above="@+id/hue"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="55dp"
            android:scaleType="fitXY"
            android:src="@drawable/gradient_saturation" />

        <SeekBar
            android:id="@+id/saturationSB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="100" />

    </FrameLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/BttnGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/blackBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:onClick="asBlack"
                android:text="@string/black"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/redBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:onClick="asRed"
                android:text="@string/red"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/limeBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lime"
                android:onClick="asLime"
                android:text="@string/lime" />

            <Button
                android:id="@+id/blueBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:onClick="asBlue"
                android:text="@string/blue"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/yellowBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:onClick="asYellow"
                android:text="@string/yellow" />

            <Button
                android:id="@+id/cyanBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cyan"
                android:onClick="asCyan"
                android:text="@string/cyan" />

            <Button
                android:id="@+id/magentaBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/magenta"
                android:onClick="asMagenta"
                android:text="@string/magenta" />

            <Button
                android:id="@+id/silverBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/silver"
                android:onClick="asSilver"
                android:text="@string/silver" />

            <Button
                android:id="@+id/grayBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:onClick="asGray"
                android:text="@string/gray" />

            <Button
                android:id="@+id/maroonBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/maroon"
                android:onClick="asMaroon"
                android:text="@string/maroon"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/oliveBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/olive"
                android:onClick="asOlive"
                android:text="@string/olive"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/greenBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:onClick="asGreen"
                android:text="@string/green"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/purpleBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:onClick="asPurple"
                android:text="@string/purple"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/tealBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal"
                android:onClick="asTeal"
                android:text="@string/teal"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/navyBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/navy"
                android:onClick="asNavy"
                android:text="@string/navy"
                android:textColor="@color/white" />
        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>

